# parallel

./: Cargo.toml  README.md  frandom.rs  main.rs  randstat.rs  stats.rs
src/: frandom.rs  main.rs  stats.rs
