# Copyright © 2018 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "parallel"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
edition = "2018"

[dependencies]
lazy_static = "1.4"
rayon = "1.5"

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[[bin]]
name = "parallel"
path = "main.rs"
